# mpad

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  install.sh  knip.config.ts  package.json  skills-lock.json  vite.config.ts
.claude/: settings.local.json
.cursor/: Dockerfile  environment.json  hooks.json
.entire/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  expect.yml  release.yml
.hooks/: pre-commit
coverage/: clover.xml  coverage-final.json  index.html
coverage/src/: App.tsx.html  index.html  main.tsx.html
docs/: HARNESS_READINESS.md  architecture.md  conventions.md  gotchas.md  testing.md
dogfood-output/: explore.mjs  report.md
dogfood-output/screenshots/: console-logs.txt
scripts/: install.sh  mdview  mpad
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  window.rs
src/components/: CommandPalette.tsx  DiffView.tsx  Editor.test.ts  Editor.tsx  FindBar.tsx  GitLog.tsx  GitStatusBar.tsx  QuickOpen.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.css  TitleBar.tsx
src/extensions/: FrontmatterNode.ts  LinkResolver.ts  MermaidNode.ts  SearchHighlight.ts  TaskItemAutoRemove.ts  XmlBlockNode.ts  gfm.ts  taskList.test.ts
src/hooks/: useFileOperations.ts  useFileWatcher.ts  useKeyboardShortcuts.ts  useResizable.ts  useStickyTrue.ts  useTheme.ts
src/lib/: contentProcessing.test.ts  (+7 more)
tests/: cli.test.sh  contentProcessing.test.ts  edgeCase.test.ts  editor.test.ts  editorInteractions.test.ts  editorSession.test.ts  fileOperations.test.ts  findBar.test.tsx  fuzzyMatch.perf.test.ts  fuzzyMatch.test.ts  linkResolver.test.ts  perf.test.ts  taskList.test.ts  ui.test.tsx
(+32 files in other folders)
