[package]
name = "mpad"
version = "0.1.2"
description = "A desktop markdown editor"
authors = ["Enea Kllomollari"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.85"

[lib]
name = "mpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-fs = { version = "2.4.5", features = ["watch"] }
tauri-plugin-cli = "2.4.1"
git2 = { version = "0.20.4", features = ["vendored-libgit2"] }
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-dialog = "2.6.0"
open = "5"
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSOpenPanel", "NSPanel", "NSSavePanel", "NSWindow", "NSResponder"] }
